--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,8 @@ PORT=8000
 
 MONGODB_URI='mongodb://127.0.0.1:27017/auction_store'
 
+EMAIL_USER='jaramosm@ufpso.edu.co'
+EMAIL_PASS='ifdjpheenjdcmycu' 
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT=587
+EMAIL_SENDER_NAME="Sistema de Subastas"
