Subiendo sistema pqrs, apartado de notificaciones, y ligeros arreglos al sitio web

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,4 @@ EMAIL_PASS='ifdjpheenjdcmycu'
 EMAIL_HOST='smtp.gmail.com'
 EMAIL_PORT=587
 EMAIL_SENDER_NAME="Sistema de Subastas"
+ADMIN_EMAIL='jaramosm@ufpso.edu.co'
